restitution avec paysant relais

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
  
 <ion-content>
   <div *ngIf="Activite_Projet == null">
-      <p>Aucune Active trouver pour le projet "{{ nomPrjt }}" !!!</p> 
+      <p>Aucune Activité trouver pour le projet "{{ nomPrjt }}" !!!</p> 
   </div> 
   <div *ngIf="Activite_Projet != null">
     <mat-action-list class="list-btn" *ngFor="let activite of Activite_Projet">
