--- a/src/app/pages/modals/modal-bloc/modal-bloc.page.html
+++ b/src/app/pages/modals/modal-bloc/modal-bloc.page.html
@@ -16,10 +16,10 @@
   <div *ngIf="isAddMepSg || isEditMepSg || isAddMepMv || isEditMepMv || isAddMepPa || isEditMepPa">
     <form [formGroup]="sg_paForm" (ngSubmit)="onFormSubmit()" class="contonair-flex">
       <div fxLayout="column width100">
-        <!--Column 1-->
+        <!--Column 1: ANNEE, BLOC, BENEFICIAIRE-->
         <div class="child-column-flex" fxLayout="row">
+          <!--Formulaire Annee-->
           <div class="child-row-flex">
-            <!--Formulaire 1-->
             <mat-form-field appearance="outline" floatLabel="auto">
               <mat-label>Annee_du</mat-label>
               <mat-select formControlName="annee">
@@ -29,22 +29,10 @@
               </mat-select>
             </mat-form-field>
           </div>
+          <!--Formulaire Bloc-->
           <div class="child-row-flex">
-            <!--Formulaire 2-->
             <mat-form-field appearance="outline" floatLabel="auto">
-              <mat-label>saison</mat-label>
-              <mat-select formControlName="saison">
-                <mat-option *ngFor="let saison of data_saison" [value]="saison">
-                  <!--{{ saison.description }}-->
-                  {{ saison.description }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>	
-          </div>
-          <div class="child-row-flex">
-            <!--Formulaire 3-->
-            <mat-form-field appearance="outline" floatLabel="auto">
-              <mat-label>bloc</mat-label>
+              <mat-label>Bloc</mat-label>
               <mat-select formControlName="bloc">
                 <mat-option (click)="onSelectBloc()" *ngFor="let bloc of data_bloc" [value]="bloc">
                   {{ bloc.nom_bloc }}
@@ -52,13 +40,10 @@
               </mat-select>
             </mat-form-field>	
           </div>
-        </div>
-        <!--Column 2-->
-        <div class="child-column-flex" fxLayout="row">
+          <!--Formulaire Beneficiaire-->
           <div class="child-row-flex">
-            <!--Formulaire 1-->
             <mat-form-field appearance="outline" floatLabel="auto">
-              <mat-label>beneficiaire</mat-label>
+              <mat-label>Beneficiaire</mat-label>
               <mat-select formControlName="beneficiaire">
                 <mat-option (click)="onSelectBenef('tout')">Tout</mat-option>
                 <mat-option (click)="onSelectBenef('filter')" *ngFor="let benef of data_benef_filtre" [value]="benef">
@@ -67,34 +52,33 @@
               </mat-select>
             </mat-form-field>
           </div>
+        </div>
+        <!--Column 2: Parcelle, DDP, Espece-->
+        <div class="child-column-flex" fxLayout="row">
+          <!--Formulaire Parcelle-->
           <div class="child-row-flex">
-            <!--Formulaire 2-->
             <mat-form-field appearance="outline" floatLabel="auto">
               <mat-label>Parcelle</mat-label>
               <mat-select formControlName="parcelle">
-                <mat-option>none</mat-option>
-                <mat-option *ngFor="let parce of data_parcelle_filter" [value]="parce">
+                <mat-option (click)="onSelectParce()" *ngFor="let parce of data_parcelle_filter" [value]="parce">
                   {{ parce.code_parce }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
+          <!--Formulaire DDP-->
           <div class="child-row-flex">
-            <!--Formulaire 3-->
             <mat-form-field appearance="fill">
-              <mat-label>ddp</mat-label>
+              <mat-label>DDP</mat-label>
               <input matInput [matDatepicker]="ddp_" formControlName="ddp">
               <mat-datepicker-toggle matSuffix [for]="ddp_"></mat-datepicker-toggle>
               <mat-datepicker #ddp_></mat-datepicker>
             </mat-form-field>
           </div>
-        </div>
-        <!--Column 3-->
-        <div class="child-column-flex" fxLayout="row">
+          <!--Formulaire Espece-->
           <div class="child-row-flex">
-            <!--Formulaire 2-->
             <mat-form-field appearance="outline">
-              <mat-label>espece</mat-label>
+              <mat-label>Espece</mat-label>
               <mat-select formControlName="espece">
                 <mat-option>--Aucune--</mat-option>
                 <mat-option (click)="onSelectEspece()" *ngFor="let espece of data_espece" [value]="espece">
@@ -103,10 +87,13 @@
               </mat-select>
             </mat-form-field>
           </div>
+        </div>
+        <!--Column 3: Variette, Saison, Qso, DT_MEP, DDT-->
+        <div class="child-column-flex" fxLayout="row">
+          <!--Formulaire Variette-->
           <div class="child-row-flex" *ngIf="isAddMepSg || isEditMepSg">
-            <!--Formulaire 3-->
             <mat-form-field appearance="outline">
-              <mat-label>variette</mat-label>
+              <mat-label>Variette</mat-label>
               <mat-select formControlName="variette">
                 <mat-option>none</mat-option>
                 <mat-option *ngFor="let variette of data_variette_filter" [value]="variette">
@@ -115,16 +102,29 @@
               </mat-select>
             </mat-form-field>	
           </div>
-          <div class="child-row-flex">
-            <!--Formulaire 1-->
-            <mat-form-field appearance="outline">
-              <mat-label *ngIf="isAddMepSg || isEditMepSg || isAddMepMv || isEditMepMv">QSO</mat-label>
-              <mat-label *ngIf="isAddMepPa || isEditMepPa">QO</mat-label>
-              <input matInput type="number" maxLength="5" placeholder="Merci de saisissez!" formControlName="qso">
+          <!--Formulaire Saison-->
+          <div class="child-row-flex" *ngIf="isCultureSaisonnier || (!isEditMepPa && !isAddMepPa && !isAddMepMv && !isEditMepMv)">
+            <mat-form-field appearance="outline" floatLabel="auto">
+              <mat-label>Saison</mat-label>
+              <mat-select formControlName="saison">
+                <mat-option></mat-option>
+                <mat-option *ngFor="let saison of data_saison" [value]="saison">
+                  <!--{{ saison.description }}-->
+                  {{ saison.description }}
+                </mat-option>
+              </mat-select>
             </mat-form-field>	
           </div>
+          <!--Formulaire QSO-->
+          <div class="child-row-flex">
+            <mat-form-field appearance="outline">
+              <mat-label *ngIf="isAddMepSg || isEditMepSg || isAddMepMv || isEditMepMv">QSO en {{espece_unite}}</mat-label>
+              <mat-label *ngIf="isAddMepPa || isEditMepPa">QO en {{espece_unite}}</mat-label>
+              <input matInput type="number" maxLength="5" placeholder="Quantité Obtenu!" formControlName="qso">
+            </mat-form-field>	
+          </div>
+          <!--Formulaire Date de mise en place-->
           <div class="child-row-flex" *ngIf="isAddMepPa || isEditMepPa || isAddMepMv || isEditMepMv">
-            <!--Formulaire 4-->
             <mat-form-field appearance="fill">
               <mat-label >dt_mep</mat-label>
               <input matInput [matDatepicker]="dt_mep" formControlName="dds">
@@ -132,11 +132,20 @@
               <mat-datepicker #dt_mep></mat-datepicker>
             </mat-form-field>
           </div>
+          <!--Formulaire Date de distribution-->
+          <div class="child-row-flex" *ngIf="isEditMepPa || isAddMepPa">
+            <mat-form-field appearance="fill">
+              <mat-label>Date de distribution</mat-label>
+              <input matInput [matDatepicker]="ddd_" formControlName="dt_distribution">
+              <mat-datepicker-toggle matSuffix [for]="ddd_"></mat-datepicker-toggle>
+              <mat-datepicker #ddd_></mat-datepicker>
+            </mat-form-field>
+          </div>
         </div>
-        <!--Column 4-->
-        <div class="child-column-flex" fxLayout="row">
+        <!--Column 4: DDS, Sfce, SC-->
+        <div class="child-column-flex" fxLayout="row" *ngIf="!isEditMepPa && !isAddMepPa">
+          <!--Formulaire DDS-->
           <div class="child-row-flex" *ngIf="isAddMepSg || isEditMepSg">
-            <!--Formulaire 2-->
             <mat-form-field appearance="fill">
               <mat-label>DDS</mat-label>
               <input matInput [matDatepicker]="dds_" formControlName="dds">
@@ -144,55 +153,43 @@
               <mat-datepicker #dds_></mat-datepicker>
             </mat-form-field>
           </div>
+          <!--Formulaire sfce emblavée-->
           <div class="child-row-flex">
-            <!--Formulaire 3-->
             <mat-form-field appearance="outline">
               <mat-label>sfce emblavée</mat-label>
               <input matInput type="number" placeholder="Merci de saisissez!" formControlName="sfce">
             </mat-form-field>
           </div>
-          <div class="child-row-flex" *ngIf="!isEditMepPa && !isAddMepPa">
-            <!--Formulaire 3-->
+          <!--Formulaire Systeme Cultural<-->
+          <div class="child-row-flex">
             <mat-form-field appearance="outline">
               <mat-label>Systeme cultural</mat-label>
               <mat-select formControlName="sc">
                 <mat-option>--Aucune--</mat-option>
                 <mat-option (click)="onSeletSc()" *ngFor="let sc of data_sc" [value]="sc">
-                  {{ sc }}
+                  {{ sc.description }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
         </div>
-        <!--Column 5 Systeme Cultural
-        <div class="child-column-flex" fxLayout="row" *ngIf="isAddMepSg || isEditMepSg">
-          <div class="child-row-flex">-->
-            <!--Formulaire 1
-            <mat-form-field appearance="outline">
-              <mat-label>Longueur Ligne</mat-label>
-              <input matInput type="number" placeholder="Merci de saisissez!" formControlName="long_ligne">
-            </mat-form-field>
-          </div>
-          <div class="child-row-flex">-->
-            <!--Formulaire 2
+        <!--Column 5 Systeme Cultural Bande-->
+        <div class="child-column-flex" fxLayout="row" *ngIf="isCultureBande || isEditMepPa || isAddMepPa">
+          <!--Formulaire Nombre Ligne-->
+          <div class="child-row-flex">
             <mat-form-field appearance="outline">
               <mat-label>Nombre Ligne</mat-label>
               <input matInput type="number" placeholder="Merci de saisissez!" formControlName="nbre_ligne">
             </mat-form-field>
           </div>
-          <div class="child-row-flex" *ngIf="isAddMepSg || isEditMepSg">-->
-            <!--Formulaire 3
+          <!--Formulaire Longueur Ligne-->
+          <div class="child-row-flex">
             <mat-form-field appearance="outline">
-              <mat-label>Systeme cultural</mat-label>
-              <mat-select formControlName="sc">
-                <mat-option>--Aucune--</mat-option>
-                <mat-option (click)="onSeletSc()" *ngFor="let sc of data_sc" [value]="sc">
-                  {{ sc }}
-                </mat-option>
-              </mat-select>
+              <mat-label>Longueur Ligne</mat-label>
+              <input matInput type="number" placeholder="Merci de saisissez!" formControlName="long_ligne">
             </mat-form-field>
           </div>
-        </div>-->
+        </div>
         <!--Column 6 Culture Associé-->
         <div class="child-column-flex" fxLayout="row" *ngIf="isAssocie">
           <div class="child-row-flex">
