--- a/src/app/pages/synchro/synchro.page.html
+++ b/src/app/pages/synchro/synchro.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <button ion-button icon-only routerLink="/homes" routerDirection="root">
+      <ion-icon name="arrow-round-back"></ion-icon>
+    </button>
     <ion-title>synchro</ion-title>
   </ion-toolbar>
 </ion-header>
